--- a/static/dice.html
+++ b/static/dice.html
@@ -8,255 +8,39 @@
 
 	<title>Dice Roller - 5e Tools</title>
 
-	<link rel="stylesheet" href="../css/reset.css">
-	<link rel="stylesheet" href="../css/material-components-web.min.css">
-	<link rel="stylesheet" href="../css/styles.css">
-
-	<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
-	<link rel="shortcut icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-	<link rel="shortcut icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-	<link rel="manifest" href="../manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+	<link rel="shortcut icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='../js/darkmode.js'></script>
+	<script src="/node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
+	<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+	<script type="module" src="../dice.bundle.js" crossorigin></script>
+	<style>
+		html, body {
+			margin: 0;
+			padding: 0;
+			border: 0;
+			font-size: 100%;
+			font: inherit;
+			vertical-align: baseline;
+		}
+		@font-face {
+			font-family: 'Material Icons';
+			font-style: normal;
+			font-weight: 400;
+			font-display: block;
+			src: local('Material Icons'),
+			local('MaterialIcons-Regular'),
+			url('/fonts/MaterialIcons-Regular.woff2') format('woff2'),
+			url('/fonts/MaterialIcons-Regular.woff') format('woff'),
+			url('/fonts/MaterialIcons-Regular.ttf') format('truetype');
+		}
+	</style>
 </head>
 
 <body>
-
-	<header class="mdc-top-app-bar mdc-top-app-bar--fixed mdc-theme--primary-bg mdc-theme--on-primary">
-		<div class="mdc-top-app-bar__row">
-			<div class="breadcrumbs mdc-theme--on-primary">
-				<div class="container breadcrumbs__list">
-					<div class="breadcrumbs__crumb"><a href="./index.html">Tools</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__last"><a href="javascript:blankHash()">Dice Roller</a></div>
-				</div>
-			</div>
-			<div class="nav-button">
-				<button class="material-icons mdc-top-app-bar__navigation-icon mdc-theme--on-primary hidden-desktop-up margin-left_small">menu</button>
-				<a href='index.html'><div class="logo logo-white light-only"></div></a>
-				<a href='index.html'><div class="logo dark-only"></div></a>
-				<a href='index.html'><span class="mdc-top-app-bar__title mdc-theme--on-primary typography_mono hidden-tablet-down">5e Tools</span></a>
-			</div>
-		</div>
-	</header>
-
-	<aside class="mdc-drawer mdc-drawer--modal mdc-theme--surface">
-		<div class="mdc-drawer__content">
-			<nav class="mdc-list">
-				<div class="mdc-drawer__header hidden-desktop-up">
-					<a href='index.html'><h3 class="mdc-drawer__title mdc-theme--on-surface typography_mono"><div class="logo margin-right_small"></div>5e Tools</h3>
-					<h6 class="mdc-drawer__subtitle mdc-theme--text-secondary-on-background margin-top_small typography_mono">A D&amp;D Players Companion</h6></a>
-				</div>
-
-				<a class="mdc-list-item mdc-theme--on-surface" href="#">
-					<label class="darkmode-label" for="dark-mode-switch">Dark Mode</label>
-					<div class="mdc-switch mdc-list-item__meta">
-						<div class="mdc-switch__track"></div>
-						<div class="mdc-switch__thumb-underlay">
-							<div class="mdc-switch__thumb">
-								<input type="checkbox" id="dark-mode-switch" class="mdc-switch__native-control" role="switch">
-							</div>
-						</div>
-					</div>
-				</a>
-
-				<hr class="mdc-list-divider">
-				<a class="mdc-list-item mdc-theme--on-surface" href="rules.html" tabindex="0">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">library_books</i>
-					<span class="mdc-list-item__text">Rules</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="variantrules.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">description</i>
-					<span class="mdc-list-item__text">Variant Rules</span>
-				</a>
-
-				<hr class="mdc-list-divider">
-				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Player Options</h6>
-				<a class="mdc-list-item mdc-theme--on-surface" href="classes.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">class</i>
-					<span class="mdc-list-item__text">Classes</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="backgrounds.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">public</i>
-					<span class="mdc-list-item__text">Backgrounds</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="feats.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">fitness_center</i>
-					<span class="mdc-list-item__text">Feats</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="races.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">face</i>
-					<span class="mdc-list-item__text">Races</span>
-				</a>
-
-				<hr class="mdc-list-divider">
-				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">References</h6>
-				<a class="mdc-list-item mdc-theme--on-surface" href="spells.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">flash_on</i>
-					<span class="mdc-list-item__text">Spells</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="conditions.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">sentiment_very_dissatisfied</i>
-					<span class="mdc-list-item__text">Conditions</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="items.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">restaurant</i>
-					<span class="mdc-list-item__text">Items</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="rewards.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">toll</i>
-					<span class="mdc-list-item__text">Other Rewards</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="bestiary.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">warning</i>
-					<span class="mdc-list-item__text">Bestiary</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="psionics.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">record_voice_over</i>
-					<span class="mdc-list-item__text">Psionics</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="cults.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">group</i>
-					<span class="mdc-list-item__text">Cults</span>
-				</a>
-
-				<hr class="mdc-list-divider">
-				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Tools</h6>
-				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="dice.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">casino</i>
-					<span class="mdc-list-item__text">Dice Roller</span>
-				</a>
-				<span class='version mdc-typography--caption'>v1.2.1</span>
-				
-			</nav>
-		</div>
-	</aside>
-
-	<div class="mdc-drawer-scrim"></div>
-
-	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
-		<div class="container">
-			<h1 class="page-title mdc-typography--headline2">Dice Roller</h1>
-			
-			<div class="dice-wrapper">
-				<div class='dice-field-container'>
-					<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
-						<i class="material-icons mdc-text-field__icon mdc-theme--primary">casino</i>
-						<input inputmode="numeric" type="tel" class="mdc-text-field__input roll-field" >
-						<div class="mdc-notched-outline">
-							<div class="mdc-notched-outline__leading"></div>
-							<div class="mdc-notched-outline__notch">
-								<label for="search-field" class="mdc-floating-label">Roll</label>
-							</div>
-							<div class="mdc-notched-outline__trailing"></div>
-						</div>
-					</div>
-					<span class='dice-field-label'>Use period (.) or comma (,) to insert a "d".<br/>Use space to insert a plus (+).</span>
-					<button class="mdc-button mdc-button--raised roll-submit">
-						<span class="mdc-button__label">Roll!</span>
-					</button>
-					<button class="mdc-button mdc-button--raised roll-clear" style='display: none;'>
-						<span class="mdc-button__label">Clear</span>
-					</button>
-
-					<div class='roll-total-wrap' style='display: none;'>
-						Total: <span id='total'></span>
-					</div>
-					<div id='output'></div>
-				</div>
-
-				<div class='dice-list-container'>
-					<div class="dice-grid-item roll" data-roll='1d4'>
-						<svg class="dice-grid-item--image"><use xlink:href="#d4"></use></svg>
-					</div>
-					<div class="dice-grid-item roll" data-roll='1d6'>
-						<svg class="dice-grid-item--image"><use xlink:href="#d6"></use></svg>
-					</div>
-					<div class="dice-grid-item roll" data-roll='1d8'>
-						<svg class="dice-grid-item--image"><use xlink:href="#d8"></use></svg>
-					</div>
-					<div class="dice-grid-item roll" data-roll='1d10'>
-						<svg class="dice-grid-item--image"><use xlink:href="#d10"></use></svg>
-					</div>
-					<div class="dice-grid-item roll" data-roll='1d12'>
-						<svg class="dice-grid-item--image"><use xlink:href="#d12"></use></svg>
-					</div>
-					<div class="dice-grid-item roll" data-roll='1d20'>
-						<svg class="dice-grid-item--image"><use xlink:href="#d20"></use></svg>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<script type="text/javascript" src="../lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="../lib/swipe.js"></script>
- 
-    <script type="text/javascript" src="../js/nav.js"></script>
-
-	<script type="text/javascript" src="../js/utils.js"></script>
-	<script type="text/javascript" src="../js/filter.js"></script>
-	<script type="text/javascript" src="../js/history.js"></script>
-	<script type="text/javascript" src="../lib/droll.js"></script>
-	<script type="text/javascript" src="../js/dice.js"></script>
-	<script type="text/javascript" src="../lib/list.js"></script>
-	<script type="text/javascript" src="../lib/jquery.js"></script>
-	
-	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none">
-		<defs>
-			<symbol id='d4' viewBox="0 0 100 100">
-				<title>4-sided dice</title>
-				<polygon stroke-width="3" stroke-miterlimit="10" points="50,6 7.5,61.5 50,94 92.5,61.5 "/>
-				<line stroke-width="3" stroke-miterlimit="10" x1="49.5" y1="6" x2="49.5" y2="94"/>
-			</symbol>
-
-			<symbol id='d6' viewBox="0 0 100 100">
-				<title>6-sided dice</title>
-				<polygon stroke-width="3" stroke-miterlimit="10" points="50,96.25 9.5,73.125 9.5,26.875 50,3.75 
-					90.5,26.875 90.5,73.125 "/>
-				<polyline stroke-width="3" stroke-miterlimit="10" points="9.5,26.75 49.5,50 49.5,96 "/>
-				<line stroke-width="3" stroke-miterlimit="10" x1="49.5" y1="50" x2="90.5" y2="26.875"/>
-			</symbol>
-
-			<symbol id='d8' viewBox="0 0 100 100">
-				<title>8-sided dice</title>
-				<rect x="18.887" y="18.887" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -20.7107 50)" stroke-width="3" stroke-miterlimit="10" width="62.225" height="62.225"/>
-				<polyline stroke-width="3" stroke-miterlimit="10" points="6,50 50,70.75 94,50 "/>
-				<line stroke-width="3" stroke-miterlimit="10" x1="49.5" y1="6" x2="49.5" y2="94"/>
-				<path stroke-width="3" stroke-miterlimit="10" d="M-40.5-22.5"/>
-			</symbol>
-
-			<symbol id='d10' viewBox="0 0 100 100">
-				<title>10-sided dice</title>
-				<polygon stroke-width="3" stroke-miterlimit="10" points="50,5 6,53 50,94.334 94,53 "/>
-				<polyline stroke-width="3" stroke-miterlimit="10" points="6,53 28.333,47 50,56 71.667,47 94,53 "/>
-				<line stroke-width="3" stroke-miterlimit="10" x1="49.5" y1="93" x2="49.5" y2="56"/>
-				<polyline stroke-width="3" stroke-miterlimit="10" points="28.333,47 49.5,7 71.667,47 "/>
-			</symbol>
-
-			<symbol id='d12' viewBox="0 0 100 100">
-				<title>12-sided dice</title>
-				<polygon stroke-width="3" stroke-miterlimit="10" points="37.5,8.5 23.5,15.75 7.5,42 7.5,58 22,83 35.5,90.5 64.5,90.5 78,83 92.5,58 92.5,42 76.5,15.75 62.5,8.5 "/>
-				<polyline stroke-width="3" stroke-miterlimit="10" points="92.5,42 72.167,63.5 50,50 28,63.5 7.5,42"/>
-				<polyline stroke-width="3" stroke-miterlimit="10" points="23.5,15.75 50,23.167 76.5,15.75 "/>
-				<line stroke-width="3" stroke-miterlimit="10" x1="49.5" y1="23" x2="49.5" y2="50"/>
-				<line stroke-width="3" stroke-miterlimit="10" x1="35.5" y1="90.5" x2="28" y2="63.5"/>
-				<line stroke-width="3" stroke-miterlimit="10" x1="64.5" y1="90.5" x2="72.167" y2="63.5"/>
-			</symbol>
-
-			<symbol id='d20' viewBox="0 0 100 100">
-				<title>20-sided dice</title>
-				<polygon stroke-width="3" stroke-miterlimit="10" points="50,97.57 8.5,73.785 8.5,26.215 50,2.43 
-					91.5,26.215 91.5,73.785 "/>
-				<polyline stroke-width="3" stroke-miterlimit="10" points="91.5,26.215 78.103,32.5 90.5,73 
-					50,81.175 9.667,73.167 21.896,32.5 8.5,26.215 "/>
-				<path stroke-width="3" stroke-miterlimit="10" d="M21.896,32.5"/>
-				<polygon stroke-width="3" stroke-miterlimit="10" points="78.103,32.5 50,3.75 21.896,32.5 50,81.175 
-					"/>
-				<line stroke-width="3" stroke-miterlimit="10" x1="49.5" y1="79" x2="49.5" y2="98"/>
-				<line stroke-width="3" stroke-miterlimit="10" x1="22" y1="33.5" x2="78" y2="33.5"/>
-			</symbol>
-		</defs>
-	</svg>
+	<dnd-dice-view></dnd-dice-view>
 </body>
 
 </html>
