Making it a true spa.

--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-	<dnd-index-view></dnd-index-view>
+	<dnd-base-routing-view></dnd-base-routing-view>
 
 	<script type="text/javascript">
 		if ("serviceWorker" in navigator) {
