--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" theme="dark">
 
 <head>
 	<meta charset="utf-8">
@@ -13,9 +13,8 @@
 	<link rel="shortcut icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
 	<link rel="manifest" href="/manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script src="/node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
-	<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-	<script type="module" src="../index.bundle.js" crossorigin></script>
+	<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+	<script type="module" src="/index.bundle.js" crossorigin></script>
 	<style>
 		html, body {
 			margin: 0;
@@ -24,6 +23,10 @@
 			font-size: 100%;
 			font: inherit;
 			vertical-align: baseline;
+		}
+		body {
+			height: 100vh;
+			background: var(--mdc-theme-background);
 		}
 		@font-face {
 			font-family: 'Material Icons';
